--- a/Matopoei/Info.plist
+++ b/Matopoei/Info.plist
@@ -83,6 +83,8 @@
     <true/>
     <key>UISupportsDocumentBrowser</key>
     <true/>
+    <key>UIFileSharingEnabled</key>
+    <true/>
     
     <!-- iPad Specific Settings -->
     <key>UIRequiresFullScreen</key>
